Configure react store, add reducers

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
       "sourceType": "module",
       "ecmaFeatures": {
           "jsx": true,
+          "experimentalObjectRestSpread": true,
           "modules": true
       }
     }
